# KNU-Mamba

./: LICENSE  README.md
KNU-PI/MambaVLA/: .gitignore  README.md  factory.py  run.py
KNU-PI/MambaVLA/MambaVLA/: __init__.py  main.py
KNU-PI/MambaVLA/MambaVLA/backbones/eagle/: eagle_backbone.py  eagle_joint_encoder.py
KNU-PI/MambaVLA/MambaVLA/backbones/eagle/eagle2_hg_model/: inference_eagle_repo.py
KNU-PI/MambaVLA/MambaVLA/backbones/resnet/: resnet_img_encoder.py  resnets.py
KNU-PI/MambaVLA/MambaVLA/benchmark/libero/: libero_sim.py
KNU-PI/MambaVLA/MambaVLA/utils/: ema.py
KNU-PI/MambaVLA/conf/: config.yaml  model.yaml  simulation.yaml  trainer.yaml
KNU-PI/MambaVLA/conf/dataset/: libero_goal.yaml  libero_object.yaml  libero_spatial.yaml
KNU-PI/MambaVLA/conf/image_encoders/: eagle.yaml  resnet.yaml
KNU-PI/MambaVLA/conf/language_encoders/: clip.yaml
KNU-PI/MambaVLA/configs/: config.py
KNU-PI/MambaVLA/scripts/libero/: libero_goal.sh  libero_object.sh  libero_spatial.sh  run_eagle_256.sh
KNU_BrainAI/: pyproject.toml  run.py
KNU_BrainAI/MambaVLA/: MambaVLA.py  main.py
KNU_BrainAI/MambaVLA/benchmark/libero/: libero_dataset.py  libero_sim.py
KNU_BrainAI/MambaVLA/policy/: flowmatching.py  policy.py
KNU_BrainAI/configs/: config.py  factory.py
